exports[`test renders <div> w/ correct children of type <ListTile> 1`] = `
<div
  className="columns is-multiline">
  <div
    className="column is-one-quarter">
    <ListTile
      title="Test One" />
  </div>
</div>
`;

exports[`test renders null based on initial state (empty "list" array) 1`] = `
<div
  className="columns is-multiline">
  <div>
    No Items!
  </div>
</div>
`;
